[package]
name = "testing"
version = "0.0.1"
authors = ["CensoredUsername <cens.username@gmail.com>"]

build = "build.rs"

[dependencies]

[dependencies.dynasm]
path = "../plugin"

[dependencies.dynasmrt]
path = "../runtime"

[build-dependencies]
lazy_static = "0.2"

[build-dependencies.dynasm]
path = "../plugin"
